# bonsai

./: LICENSE  README.md  pyproject.toml
bonsai/: __init__.py  a.py  cli.py  commands.py  core.py  main.py  sample.json  sample1.json  visualize_tree.py
bonzai/: cli.py  commands.py  core.py
test/: file_permission.py  import_testing.py  json_tree.py  sample.json
