[project]
name = "bonsai"
version = "0.1.0"
description = ""
authors = [
    {name = "abhi-pixel1",email = "bharadwaj.abhi.r@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click (>=8.1.8,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bonsai = "bonsai.cli:cli" # entrypoint to the CLI